# intervalpylib

./: .gitignore  AreaCalculator.py  README.md  Solution existence test for 2-RPR.ipynb  Solution existence test for 3-RPR.ipynb  SymbolicEquationSolver.py  example.py  pyinterval.py  pyproject.toml  requirements.txt
pyintervallib/: AreaCalculator.py  Solvers.py  SymbolicEquationSolver.py
src/intervalpylib/: AreaCalculator.py  Solvers.py  SymbolicEquationSolver.py  __init__.py
